--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+<p>Hello from Vasavi!</p>
 
 </body>
 </html>
