--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <h1>This is a forking tutorial</h1>
+  <p>Making changes so that I can practice making pull requests</p>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
