--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+<h1>thanks for forking you and you can fork me to</h1>
 
 <!-- Feel free to change this text here -->
 <p>
